--- a/KSmoving System/pages/viewRidePats.html
+++ b/KSmoving System/pages/viewRidePats.html
@@ -431,7 +431,7 @@
                                             <th>שם החולה</th>
                                             <th>מוצא</th>
                                             <th>יעד</th>
-                                            <th style="direction:rtl">תאריך ושעה</th>
+                                            <th>תאריך ושעה</th>
                                             <th>נהגים בנסיעה</th>
                                             <th>רכז</th>
                                             <th>ערוך דרישה</th>
