Disable all Checkboxes when viewing

--- a/KSmoving System/pages/ridePatForm.html
+++ b/KSmoving System/pages/ridePatForm.html
@@ -456,6 +456,14 @@
             }
             if (arr_escort.length == 0) str = "<label>אין מלווים</label>";
             $("#selectEscort").html(str);
+
+            if (arr_customer.func=="show") {
+                var select = $("#selectEscort input");
+                for (var i = 0; i < select.length; i++) {
+                    $("#selectEscort input").eq(i).prop('disabled', true);
+                }
+            }
+            
         }
 
         function generateEscErrorCB() {
@@ -912,8 +920,15 @@
                         $("#dirBTN").attr('disabled', 'disabled');
                         $("#patArabic").attr('disabled', 'disabled');
                         $("#saveCustomer").attr('disabled', 'disabled');
-                        $("#escortDiv").children().prop('disabled', true); //Doesn't work in Chrome
+                        //var arr = $("#escortDiv").children();
+                       // alert(arr[0]);
+                       // $("#escortDiv").children().prop('disabled', true); //Doesn't work in Chrome
                         //$("#selectEscort :checkbox").attr('disabled', true)
+                        //var select = $("#selectEscort input");
+                        //for (var i = 0; i < select.length; i++) {
+                        //    $("#selectEscort input").eq(i).prop('disabled', true);
+                        //}
+                        
                         $("#onlyEscort").prop('disabled', true);
 
                     }
