Changed params in setvolunteerprefs

--- a/KSmoving System/pages/Tets.html
+++ b/KSmoving System/pages/Tets.html
@@ -13,8 +13,8 @@
             var area1 = "צפון";
             var area2 = "מרכז";
             var PrefArea = [area1, area2];
-            var Shift1 = ["ראשון", "בוקר"];
-            var Shift2 = ["שלישי", "אחהצ"];
+            var Shift1 = "morningA";
+            var Shift2 = "EveningF";
             var PrefTime = [Shift1, Shift2];
             var AvailableSeats = 4;
 
