--- a/Road to Recovery/pages/index.html
+++ b/Road to Recovery/pages/index.html
@@ -81,7 +81,7 @@
                         <!-- LOGO -->
                         <div class="pull-left">
                             <div class="text-center">
-                                <a href="index.html" class="logo"><span>בדרך להחלמה</span>&nbsp&nbsp&nbsp<i class="ti-truck"></i>  </a>
+                                <a href="index.html" class="logo"><span>בדרך להחלמה</span></a>
                             </div>
                         </div>
 
