--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -1023,6 +1023,7 @@
                     } else ($("#selectEscort").html("<label>אין מלווים</label>"));
 
                     $("#selectOrigin option[value='" + ridePat.Origin.Name + "']").prop('selected', true);
+                    ridePat.Destination.Name = ridePat.Destination.Name.replace("'", "\\'");
                     $("#selectDestination option[value='" + ridePat.Destination.Name + "']").prop('selected', true);
 
                     $("#dateRide").val(date);
