--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -41,14 +41,16 @@
     <!-- Select2 css+js -->
     <link href="assets/css/select2.css" rel="stylesheet" />
     <script src="assets/js/select2.min.js"></script>
-
+    <script src="lib/moment.js"></script>
+    <!--<script src="lib/sorting.js"></script>-->
 
     <script>
         checkCookie();
         $(document).ready(function () {
             //Create a DataTable from the Table
+           // $.fn.dataTable.moment('MM-DD-YY HH:mm');
             t = $('#datatable-buttons').DataTable();
-            getCoors();
+                        getCoors();
             refreshTable();
         });
 
@@ -105,17 +107,8 @@
                         //Change date format
                         var temp = arr_rides[i].Date.substring(arr_rides[i].Date.indexOf("(") + 1);
                         temp = temp.substring(0, temp.indexOf(")"));
-                        var date = new Date(parseInt(temp));//.toLocaleString();
-                        var day = date.getDate();
-                        var month = date.getMonth() + 1;
-                        var year = date.getFullYear();
-                        var hours = date.getHours();
-                        var minutes = date.getMinutes();
-                        if (hours < 10) hours = "0" + hours;
-                        if (minutes < 10) minutes = minutes + "0";
-                        if (day < 10) day = "0" + day;
-                        if (month < 10) month = "0" + month;
-                        var date = day + "/" + month + "/" + year + " " + hours + ":" + minutes;
+                        var date = new Date(parseInt(temp)).toLocaleString();
+                       // var dateString = moment(date, "MM-DD-YY HH:mm");
 
                         if (unassigned) {
                             $("#activeCustomers").prop('checked', false);
