--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -112,7 +112,7 @@
         }
 
         function generateCitiesErrorCB(e) {
-            alert("Error in generateCities: " + e.responseMessage);
+            alert("Error in generateCities: " + e.responseText);
         }
 
         function generateVolTypes() {
