--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -68,7 +68,7 @@
 
                         btnStr += showBtn + " " + editBtn;
 
-                        if (arr_patients[i].Status == "לא פעיל") {
+                        if (arr_patients[i].IsActive == false) {
                             var reactiveBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזר'><i class='fa fa-undo' ></i></button>";
                             btnStr += " " + reactiveBtn;
                         }
@@ -101,9 +101,9 @@
                     $('#datatable-buttons tbody').on('click', '#remove', function () {
                         var data = t.row($(this).parents('tr')).data();
                         swal({
-                            title: "אתה בטוח שברצונך למחוק את החולה:",
+                            title: "האם אתם בטוחים?",
                             type: "warning",
-                            text: data[0],
+                            text: "מחיקת החולה "+data[0],
                             showCancelButton: true,
                             cancelButtonText: "בטל",
                             confirmButtonClass: 'btn-warning',
@@ -124,9 +124,9 @@
                     $('#datatable-buttons tbody').on('click', '#reactive', function () {
                         var data = t.row($(this).parents('tr')).data();
                         swal({
-                            title: "אתה בטוח שברצונך לשחזר את החולה:",
+                            title: "האם אתם בטוחים?",
                             type: "warning",
-                            text: data[0],
+                            text: "שחזור החולה "+data[0],
                             showCancelButton: true,
                             cancelButtonText: "בטל",
                             confirmButtonClass: 'btn-warning',
@@ -145,11 +145,11 @@
 
                     });
                 },
-                error: function (err) { alert("Error in getPatients"); }
+                error: function (err) { alert("Error in getPatients: "+err.responseText); }
             });
         }
 
-        function deactivatePatient(displayName, active) {
+        function SetPatientStatus(displayName, active) {
             checkCookie();
             $.ajax({
                 dataType: "json",
@@ -158,7 +158,7 @@
                 type: "POST",
                 data: JSON.stringify({ displayName: displayName, active: active }),
                 success: function (data) { },
-                error: function (err) { alert("Error in SetPatientStatus"); }
+                error: function (err) { alert("Error in SetPatientStatus: "+err.responseText); }
             });
 
         }
